new file:   images/fardeen.jpg 	new file:   images/fardeen.png 	modified:   index.html 	modified:   javascript/javascript.js 	modified:   style/style.css

--- a/style/style.css
+++ b/style/style.css
@@ -76,13 +76,42 @@ section{
     align-items: center;
 }
 
+.home-img img {
+    object-fit: cover;
+    height: 69vh;
+    width: 30vw;
+    border-radius: 20%;
+    box-shadow: 2px 2px 20px 2px var(--main-color);
+    animation: floatImage 4s ease-in-out infinite;
+}
+
+@keyframes floatImage {
+    0% {
+        transform: translateY(0);
+    }
+
+    50% {
+        transform: translateY(-2.4rem);
+    }
+
+    100% {
+        transform: translateY(0);
+    }
+}
+
 .home-content h3{
     font-size: 3.2rem;
     font-weight: 700;
 }
+
+.home-content h3:nth-of-type(2){
+    margin-bottom: 2rem;
+}
+
  span{
     color: var(--main-color);
 }
+
 .home-content h1{
     font-size: 5.6rem;
     font-weight: 700;
@@ -128,12 +157,6 @@ section{
     background-color: var(--bg-color);
     color: #0ef;
 }
-.home-img img{
-    height: 69vh;
-    width: 30vw;
-    border-radius: 20%;
-    box-shadow: 2px 2px 20px 2px var(--main-color);
-}
 
 
 /*----------about section-----------*/
@@ -141,9 +164,11 @@ section{
 .about-image img{
     height: 59vh;
     width: 25vw;
+    margin-right: 10px;
     border-radius: 20%;
     box-shadow: 2px 2px 10px 10px  var(--main-color);
-    border: inset;
+    box-shadow: 2px 2px 20px 2px var(--main-color);
+   
 }
 
 .about{
@@ -361,6 +386,18 @@ section{
         padding:10rem 3% 2rem;
     }
 
+    .services{
+        padding-bottom: 7rem;
+    }
+
+    .portfolio{
+        padding: 7rem;
+    }
+
+    .contact{
+        min-height: auto;
+    }
+
     .footer{
         padding : 2rem 3%;
     }
@@ -380,6 +417,11 @@ section{
             background: var(--bg-color);
             border-top: .1rem solid rgba(0,0,0,.2);
             box-shadow: 0 .5rem 1rem rgba(0,0,0,.2);
+            display: none;
+        }
+
+        .navbar.active{
+            display: block;
         }
 
         .navbar a{
@@ -387,4 +429,77 @@ section{
             font-size: 2rem;
             margin: 3rem 0;
         }
+
+        .home{
+            flex-direction: column;
+        }
+
+        .home-content h3 {
+            font-size: 2.6rem;
+        }
+
+        .home-content h1{
+            font-size: 5rem;
+        }
+
+        .home-img img{
+            width: 70vw;
+            margin-top: 4rem;
+        }
+ 
+        .about {
+            flex-direction: column-reverse;
+        }
+
+        .about img{
+            width: 70vw;
+            margin-top: 4rem;
+        }
+         
+        .services h2{
+            margin-bottom: 3rem;
+        }
+
+        .portfolio h2{
+            margin-bottom: 3rem;
+        }
+
+        .portfolio-container {
+            grid-template-columns: repeat(2,1fr);
+        }
+}     
+
+@media(max-width:617px) {
+    .portfolio-container{
+        grid-template-columns: 1fr;
+    }
+}
+
+@media (max-width:450px){
+     html{
+        font-size: 50%;
+     }
+
+     .contact form .input-box input {
+        width: 100%;
+     }
+}
+
+@media (max-width:365px){
+    .home-img img {
+        width: 90vw;
+    }
+
+    .about-image img {
+        width: 90vw;
+    }
+
+    .footer{
+        flex-direction: column-reverse;
+    }
+
+    .footer p {
+        text-align: center;
+        margin-top: 2rem;
+    }
 }
